typescript/checker/tests/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens13.ts.stderr
error: Expected unicode escape
 --> $DIR/tests/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens13.ts:1:10
  |
1 | /regexp/ \ ;
  |          ^

